# faultforge

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  configurations.py  ep-comparison.py  pyproject.toml  vulnerability.py
.github/workflows/: python.yml  release.yml  rust.yml
crates/bindings/: Cargo.toml
crates/bindings/src/: cep.rs  common.rs  embedded_parity.rs  fault.rs  fault_injection.rs  lib.rs  mset.rs  picker.rs  secded.rs
crates/faultforge/: Cargo.toml
crates/faultforge-bindings/: Cargo.toml
crates/faultforge-bindings/src/: embedded_parity.rs  lib.rs  single_bit_encoding.rs
crates/faultforge/src/: bit_buffer.rs
crates/faultforge/src/encoding/: embedded_parity.rs
crates/memory/: Cargo.toml
crates/memory/benches/: chunking.rs
crates/memory/src/: bit_buffer.rs  byte_buffer.rs  chunks.rs  encoding.rs  fault.rs  lib.rs  limited.rs  sequence.rs
crates/memory/src/bit_buffer/: bit.rs  impls.rs  impls_numpy.rs  iter.rs  result.rs  tests.rs
crates/memory/src/byte_buffer/: impls.rs  tests.rs
crates/memory/src/chunks/: tests.rs
crates/memory/src/encoding/: embedded_parity.rs  majority.rs  secded.rs
crates/memory/src/encoding/embedded_parity/: tests.rs
crates/memory/src/encoding/majority/: tests.rs
crates/memory/src/encoding/secded/: tests.rs
crates/memory/src/sequence/: non_uniform.rs  uniform.rs
crates/picker/: Cargo.toml
crates/picker/src/: lib.rs
doc/: library.md
doc/experiments/: encoded_memory.md
docs/: library.md
faultforge/: __init__.py  _utils.py  data.py  dtype.py  experiment.py  stats.py  system.py  tensor_ops.py  utils.py
faultforge/cifar/: dataset.py  model.py  system.py
faultforge/cli/: draw.py  record.py  strip_faults.py
faultforge/encoding/: __init__.py  _tensor.py  bit_pattern.py  embedded_parity.py  encoding.py  msb.py  mset.py  secded.py  sequence.py  system.py  test_embedded_parity.py
faultforge/imagenet/: __init__.py  model.py  system.py
python/faultforge/: __init__.py  __main__.py  _rust.pyi  dataset.py  dtype.py  encoding.py  experiment.py  fault.py  picker.py  tensor.py
python/faultforge/_internal/: common.py  dataset.py  dtype.py  experiment.py  fault.py  fingerprint.py  system.py  tensor.py  tensor_ops.py  utils.py
python/faultforge/_internal/cifar/: dataset.py  model.py  system.py
python/faultforge/_internal/cli/: draw.py  record.py  strip_faults.py
python/faultforge/_internal/encoding/: _tensor.py  abc.py  bit_pattern.py  cep.py  embedded_parity.py  identity.py  mset.py  nn.py  secded.py  sequence.py  system.py  test_embedded_parity.py
python/faultforge/_internal/experiments/: encoded_memory.py
python/faultforge/_internal/imagenet/: dataset.py  model.py  system.py
python/faultforge/_internal/loading/: __init__.py  cifar.py  imagenet.py
python/faultforge/_internal/model/: abc.py  cifar.py  imagenet.py
python/faultforge/_internal_new/: common.py  dataset.py  experiment.py  tensor.py
python/faultforge/_internal_new/encoding/: abc.py  cep.py  identity.py  mset.py  nn.py  secded.py  sequence.py
python/faultforge/_internal_new/model/: abc.py  cifar.py  imagenet.py
python/faultforge/_rust/: __init__.pyi  cep.pyi  secded.pyi
python/faultforge/experiments/: encoded_memory.py
python/tests/: test_encoded_module.py  test_experiment.py
scripts/: cifar_norm.py
