[project]
name = "faultforge"
version = "0.1.0"
description = "Fault mitigation simulations for PyTorch models"
authors = [
    { name = "Marten Roots", email = "marten.roots@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.1",
    "pydantic>=2.12.3",
    "torch>=2.7.1",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[project.optional-dependencies]
all = [
    "matplotlib>=3.10.5",
    "pillow>=11.3.0",
    "timm>=1.0.22",
    "torchvision>=0.22.1",
    "typer>=0.20.0",
]
cifar = [
    "torchvision>=0.22.1",
]
cli = [
    "matplotlib>=3.10.5",
    "torchvision>=0.22.1",
    "typer>=0.20.0",
]
imagenet = [
    "pillow>=11.3.0",
    "timm>=1.0.22",
    "torchvision>=0.22.1",
]

[project.scripts]
faultforge = "faultforge.cli.main:main"

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "hypothesis>=6.148.7",
    "pytest>=9.0.2",
    "ruff>=0.12.4",
]

[tool.uv]
default-groups = ["dev"]

[tool.basedpyright]
typeCheckingMode = "recommended"
reportExplicitAny = false
reportMissingTypeStubs = false
reportPrivateUsage = false

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
# See https://www.maturin.rs/config.html for more options.
features = ["pyo3/extension-module"]
# https://www.maturin.rs/project_layout.html#import-rust-as-a-submodule-of-your-project
module-name = "faultforge._core"
manifest-path = "crates/faultforge-bindings/Cargo.toml"
