[project]
name = "faultforge"
version = "0.1.0"
description = "Fault mitigation simulations for PyTorch models"
authors = [
    { name = "Marten Roots", email = "marten.roots@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.1",
    "pillow>=11.3.0",
    "pydantic>=2.12.3",
    "scipy>=1.17.1",
    "timm>=1.0.22",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "typer>=0.20.0",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "maturin>=1.14.0",
    "pytest>=9.0.2",
    "ruff>=0.12.4",
    "ty>=0.0.49",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[tool.maturin]
# See https://www.maturin.rs/config.html for more options
features = ["pyo3/extension-module"]
# https://www.maturin.rs/project_layout.html#import-rust-as-a-submodule-of-your-project
module-name = "faultforge._rust"
manifest-path = "crates/bindings/Cargo.toml"
# The source directory for top level Python packages
python-source = "python"

[tool.ty.rules]
missing-override-decorator = "warn"
