[package]
name = "bindings"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]
# This name will be used for the .so file that is used by Python.
name = "_rust"

[dependencies]
memory = { path = "../memory", features = ["numpy"] }
picker = { path = "../picker" }

numpy.workspace = true
pyo3.workspace = true
rand.workspace = true
rayon.workspace = true
