[package]
name = "faultforge"
edition.workspace = true
version.workspace = true

[dependencies]
rayon.workspace = true
picker = { path = "../picker" }
thiserror.workspace = true
rand.workspace = true

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
proptest.workspace = true

[[bench]]
name = "chunking"
harness = false
